--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,18 @@
 			<artifactId>spring-test</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<!-- 자바 JDBC사용 -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		   <!-- 콘솔에서 SQL로그를 확인하는 용도의 log4jdbc 드라이버추가 -->
+		   <dependency>
+			<groupId>org.bgee.log4jdbc-log4j2</groupId>
+			<artifactId>log4jdbc-log4j2-jdbc4</artifactId>
+			<version>1.16</version>
+		  </dependency>
 		   
 	</dependencies>
     <build>
