--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.edu</groupId>
 	<artifactId>controller</artifactId>
-	<name>kimilguk-spring5</name>
+	<name>kimjiae-spring5</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -12,6 +12,7 @@
 		<org.springframework-version>5.2.5.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.9.0</org.aspectj-version>
 		<org.slf4j-version>1.7.25</org.slf4j-version>
+		<spring.security.version>5.2.3.RELEASE</spring.security.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -147,7 +148,33 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-		   
+		<!-- 스프링시큐리티 확장모듈추가(아래) -->
+		<dependency>
+		 <groupId>org.springframework.security</groupId>
+		 <artifactId>spring-security-core</artifactId>
+		 <version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+		 <groupId>org.springframework.security</groupId>
+		 <artifactId>spring-security-web</artifactId>
+		 <version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+		 <groupId>org.springframework.security</groupId>
+		 <artifactId>spring-security-config</artifactId>
+		 <version>${spring.security.version}</version>
+		</dependency>
+		<dependency>
+		 <groupId>org.springframework.security</groupId>
+		 <artifactId>spring-security-taglibs</artifactId>
+		 <version>${spring.security.version}</version>
+		</dependency>
+		<!-- 파일업로드 라이브러리 -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3.3</version>
+		</dependency>   
 	</dependencies>
     <build>
         <plugins>
