--- a/src/main/resources/properties/sns.properties
+++ b/src/main/resources/properties/sns.properties
@@ -1,8 +1,8 @@
 # \ub124\uc774\ubc84\uc544\uc774\ub514\ub85c\uadf8\uc778\uc5d0\uc11c \uc0ac\uc6a9\ud558\ub294 ID\uc640 Secret\ub97c \uc804\uc5ed\ubcc0\uc218\ub85c \uc0dd\uc131
-SnsClientID=ciBgmp3cYxBCDUobktOG
-SnsClientSecret=ZEI_pip1dr
-SnsCallbackUri=http://127.0.0.1:8080/naver_callback
+#SnsClientID=lwGXTj2GoyXtTIH4wiZA
+#SnsClientSecret=mp57TLDqtn
+#SnsCallbackUrl=http://127.0.0.1:8080/naver_callback
 # \ud5e4\ub85c\ucfe0\uc6a9 \ub124\uc774\ubc84 \uc544\uc774\ub514 \ub85c\uadf8\uc778 \uc124\uc815
-#SnsClientID=
-#SnsClientSecret=
-#SnsCallbackUri=https://kimjiae-spring5.herokuapp.com/naver_callback
+SnsClientID=vmtBPNsSM_eJP5YVS8jJ
+SnsClientSecret=3sVAfYJ8H3
+SnsCallbackUri=https://kimjiae-spring5.herokuapp.com/naver_callback
