--- a/src/main/resources/properties/sns.properties
+++ b/src/main/resources/properties/sns.properties
@@ -5,4 +5,4 @@
 # \ud5e4\ub85c\ucfe0\uc6a9 \ub124\uc774\ubc84 \uc544\uc774\ub514 \ub85c\uadf8\uc778 \uc124\uc815
 SnsClientID=vmtBPNsSM_eJP5YVS8jJ
 SnsClientSecret=3sVAfYJ8H3
-SnsCallbackUri=https://kimjiae-spring5.herokuapp.com/naver_callback
+SnsCallbackUrl=https://kimjiae-spring5.herokuapp.com/naver_callback
